# REAL-ESTATE-MANAGEMENT-SYSTEM

./: README.md
REAL ESTATE MANAGEMENT SYSTEM STCTURED/: CMakeLists.txt  main.cpp
REAL ESTATE MANAGEMENT SYSTEM STCTURED/DATA BASE/LOGIN DATA BASE/: LoginDatabase.cpp  LoginDatabase.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/DATA BASE/accounts/: AccountsDB.cpp  AccountsDB.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/DATA BASE/agent data base/appointment/: AppointmentDB.cpp  AppointmentDB.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/DATA BASE/agent data base/commishion calculator data base/: CommissionCalculatorDB.cpp  CommissionCalculatorDB.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/DATA BASE/agent data base/customer details data base/: customer_details_data_base_class.cpp  customer_details_data_base_class.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/DATA BASE/agent data base/feedback/: FeedbackDB.cpp  FeedbackDB.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/DATA BASE/agent data base/property details data base/: property_details_data_base_class.cpp  property_details_data_base_class.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/DATA BASE/employees directory/: EmployeesDB.cpp  EmployeesDB.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/DATA BASE/operations/: InspectionDB.cpp  InspectionDB.h  ListingManagerDB.cpp  ListingManagerDB.h  UtilityDB.cpp  UtilityDB.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/DATA FILES/: Available properties.csv  Customer details.csv  HR_RECORD.csv  Utilitis.csv  appointments.csv  commission_history.csv  deals.csv  expenses.csv  feedbacks.csv  inspection.csv  listingmanager.csv
REAL ESTATE MANAGEMENT SYSTEM STCTURED/MODEL/ACCOUNTS MODEL/: AccountsModel.cpp  AccountsModel.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/MODEL/Employees model/: Employees_model.cpp  Employees_model.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/MODEL/LOGIN MODEL/: login_model_class.cpp  login_model_class.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/MODEL/agent model/: Appointment.cpp  Appointment.h  CUSTOMER_DETAILS.cpp  CUSTOMER_DETAILS.h  CommissionCalculatorModel.cpp  CommissionCalculatorModel.h  Feedback.cpp  Feedback.h  PROPERTY_DETAILS.cpp  PROPERTY_DETAILS.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/MODEL/operations/: ListingManagerModel.cpp  ListingManagerModel.h  PropertyInspection.cpp  PropertyInspection.h  UtilityBill.cpp  UtilityBill.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/VIEW/AGENT VIEW/APPOINTMENT/: AppointmentView.cpp  AppointmentView.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/VIEW/AGENT VIEW/PROPERTY_DETAILS_VIEW/: PROPERTY_DETAILS_VIEW_CLASS.cpp  PROPERTY_DETAILS_VIEW_CLASS.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/VIEW/AGENT VIEW/commishion view/: CommissionCalculatorView.cpp  CommissionCalculatorView.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/VIEW/AGENT VIEW/customer_details_view/: customer_details_view_class.cpp  customer_details_view_class.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/VIEW/AGENT VIEW/feed back view/: FeedbackView.cpp  FeedbackView.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/VIEW/LOGIN VIEW/: LoginView.cpp  LoginView.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/VIEW/accounts/: AccountsView.cpp  AccountsView.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/VIEW/employees view/: employees_view_class.cpp  employees_view_class.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/VIEW/operataions/UTILITY/: UtilityView.cpp  UtilityView.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/VIEW/operataions/inspector/: InspectionView.cpp  InspectionView.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/VIEW/operataions/listing/: ListingManagerView.cpp  ListingManagerView.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/controoler/AGENT CONTROLER/PROPERTY DETAILS CONTROLER/: PROPERTY_DETAILS_CONTROLLERS_CLASS.cpp  PROPERTY_DETAILS_CONTROLLERS_CLASS.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/controoler/AGENT CONTROLER/appointment/: AppointmentController.cpp  AppointmentController.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/controoler/AGENT CONTROLER/commishion class/: CommissionCalculatorController.cpp  CommissionCalculatorController.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/controoler/AGENT CONTROLER/customer details controller class/: customer_details_controller_class.cpp  customer_details_controller_class.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/controoler/AGENT CONTROLER/feedback/: FeedbackController.cpp  FeedbackController.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/controoler/accounts controller/: AccountsController.cpp  AccountsController.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/controoler/employees controller/: EmployeesController.cpp  EmployeesController.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/controoler/login/: LoginController.cpp  LoginController.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/controoler/operation/inspection/: InspectionController.cpp  InspectionController.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/controoler/operation/listing/: ListingManagerController.cpp  ListingManagerController.h
REAL ESTATE MANAGEMENT SYSTEM STCTURED/controoler/operation/utility/: UtilityController.cpp  UtilityController.h
